[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "log-analyzer-cli"
version = "0.1.0"
description = "Streaming log analyzer CLI (nginx + JSONL)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "You"}]
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[project.scripts]
logsift = "log_analyzer_cli.cli:main"
log-analyzer = "log_analyzer_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
